@@ -108,6 +108,7 @@ try:
 	import portage_exception
 	import portage_gpg
 	import portage_locks
+	import portage_exec
 	from portage_locks import *
 	import portage_checksum
 	from portage_checksum import *
@@ -1400,9 +1401,10 @@ class config:
 
 		return mydict
 
+
 # XXX This would be to replace getstatusoutput completely.
 # XXX Issue: cannot block execution. Deadlock condition.
-def spawn(mystring,mysettings,debug=0,free=0,droppriv=0,fd_pipes=None,returnpid=False,logfile=None):
+def spawn(mystring,mysettings,debug=0,free=0,droppriv=0,fd_pipes=None,**keywords):
 	"""spawn a subprocess with optional sandbox protection, 
 	depending on whether sandbox is enabled.  The "free" argument,
 	when set to 1, will disable sandboxing.  This allows us to 
@@ -1411,130 +1413,26 @@ def spawn(mystring,mysettings,debug=0,free=0,droppriv=0,fd_pipes=None,returnpid=
 	signal handling.  Using spawn allows our Portage signal handler
 	to work."""
 
-	check_config_instance(mysettings)
+	if type(mysettings) == types.DictType:
+		env=mysettings
+		keywords["opt_name"]="[ %s ]" % "portage"
+	else:
+		check_config_instance(mysettings)
+		env=mysettings.environ()
+		keywords["opt_name"]="[%s]" % mysettings["PF"]
 
-	mypid=[]
-
-	if logfile:
-		pr,pw=os.pipe()
-		mypid.extend(spawn("tee -i -a '%s'" % logfile, mysettings, debug=debug, free=1,returnpid=True,fd_pipes={0:pr,1:1}))
-		retval=os.waitpid(mypid[-1],os.WNOHANG)[1]
-		if retval!=0:
-			# he's dead jim.
-			if (retval & 0xff)==0:
-				return (retval >> 8) # return exit code
-			else:
-				return ((retval & 0xff) << 8) # interrupted by signal
-		if not fd_pipes:
-			fd_pipes={}
-			fd_pipes[0] = 0
-		fd_pipes[1]=pw
-		fd_pipes[2]=pw
 
 	droppriv=(droppriv and ("userpriv" in features) and \
-	         ("nouserpriv" not in string.split(mysettings["RESTRICT"])))
-	
-	myargs=[]
+		("nouserpriv" not in string.split(mysettings["RESTRICT"])))
+
 	if ("sandbox" in features) and (not free):
-		mycommand = SANDBOX_BINARY
-		myargs=["["+mysettings["PF"]+"] sandbox",mystring]
+		keywords["opt_name"] += " sandbox"
+		if droppriv and portage_gid and portage_uid:
+			keywords.update({"uid":portage_uid,"gid":portage_gid,"groups":[portage_gid],"umask":002})
+		return portage_exec.spawn_sandbox(mystring,env=env,**keywords)
 	else:
-		mycommand = BASH_BINARY
-		if debug:
-			myargs=["["+mysettings["PF"]+"] bash","-x","-c",mystring]
-		else:
-			myargs=["["+mysettings["PF"]+"] bash","-c",mystring]
-
-	mypid.append(os.fork())
-	if mypid[-1]==0:
-		# this may look ugly, but basically it moves file descriptors around as needed 
-		# to ensure no handles get stomped on by another in the final dup2 calls.
-		trg_fd=[]
-		if type(fd_pipes)==types.DictType:
-			src_fd=[]
-			k=fd_pipes.keys()
-			k.sort()
-			for x in k:
-				trg_fd.append(x)
-				src_fd.append(fd_pipes[x])
-			for x in range(0,len(trg_fd)):
-				if trg_fd[x] == src_fd[x]:
-					continue
-				if trg_fd[x] in src_fd[x+1:]:
-					new=os.dup2(trg_fd[x], max(src_fd) + 1)
-					os.close(trg_fd[x])
-					try:
-						while True:
-							src_fd[s.index(trg_fd[x])]=new
-					except: pass
-			for x in range(0,len(trg_fd)):
-				if trg_fd[x] != src_fd[x]:
-					os.dup2(src_fd[x], trg_fd[x])
-		else:
-			trg_fd=[0,1,2]
-		try:
-			import resource
-			max_limit=resource.getrlimit(RLIMIT_NOFILE)
-		except:
-			# hokay, no resource module.  running on windows, or a borked python.
-			# sane default instead
-			max_limit=256
-		for x in range(0,max_limit):
-			if x not in trg_fd:
-				try:
-					os.close(x)
-				except: pass
-
-		if droppriv:
-			if portage_gid and portage_uid:
-				#drop root privileges, become the 'portage' user
-				os.setgid(portage_gid)
-				os.setgroups([portage_gid])
-				os.setuid(portage_uid)
-				os.umask(002)
-				try:
-					os.chown(SANDBOX_PIDS_FILE,uid,portage_gid)
-					os.chmod(SANDBOX_PIDS_FILE,0664)
-				except:
-					pass
-			else:
-				writemsg("portage: Unable to drop root for "+str(mystring)+"\n")
-		
-		try:
-			os.execve(mycommand,myargs,mysettings.environ())
-		except Exception, e:
-			raise str(e)+":\n   "+mycommand+" "+string.join(myargs)
-		# If the execve fails, we need to report it, and exit
-		# *carefully* --- report error here
-		os._exit(1)
-		sys.exit(1)
-		return # should never get reached
-
-	if logfile:
-		os.close(pr)
-		os.close(pw)
-
-	if returnpid:
-		return mypid
-
-	while len(mypid):
-		retval=os.waitpid(mypid[-1],0)[1]
-		if retval != 0:
-			for x in mypid[0:-1]:
-				os.kill(x,signal.SIGTERM)
-				if os.waitpid(x,os.WNOHANG)[0] == 0:
-					# feisty bugger, still alive.
-					os.kill(x,signal.SIGKILL)
-				os.waitpid(x,0)
-			
-			# at this point we've killed all other kid pids generated via this call. return now.
-			if (retval & 0xff)==0:
-				return (retval >> 8) # return exit code
-			else:
-				return ((retval & 0xff) << 8) # interrupted by signal
-		else:
-			mypid.pop(-1)
-	return 0
+		keywords["opt_name"] += " bash"
+		return portage_exec.spawn_bash(mystring,env=env,**keywords)
 
 def fetch(myuris, mysettings, listonly=0, fetchonly=0, locks_in_subdir=".locks",use_locks=1, try_mirrors=1):
 	"fetch files.  Will use digest file if available."
